# meson

mesonbuild/: build.py
mesonbuild/dependencies/: base.py
mesonbuild/interpreter/: interpreterobjects.py
mesonbuild/modules/: pkgconfig.py
test cases/common/279 whole static/: .gitignore  lib1.c  lib2.c  lib3.c  main.c  meson.build
test cases/common/279 whole static/subprojects/a/: liba.c  meson.build
